sass/conditionals/event/admission-event-detail.sass
@charset "UTF-8"

// IMPORT COMPASS AND EXTENSIONS
@import compass
@import breakpoint
@import ../../../fonts/icons/icons
@import partials/base/00-variables/all
@import partials/base/03-extend/gsb-revamp

// Admission event - Detail
.node-type-admission-event
  #page-title
    display: none

.node-admission-event.view-mode-full
  @extend %black-border-top-small
  padding: $standard-padding
  padding-bottom: 0
  +breakpoint($bp-mobile-max)
    border-top: 0

  // Date wrapper
  .group-wrapper-date
    margin-bottom: 26px

  // Date and time field
  .field-name-field-event-date
    display: inline
    font-family: $font-demi
    font-size: 18px
    font-weight: normal
    line-height: 1.3
    +breakpoint($bp-mobile-max)
      font-size: 16px

  // Allow time zone next to time
  .split-date-time
    display: inline

  .time
    display: inline-block
    margin-right: 5px

  // Time zone
  .field-name-field-time-zone
    font-family: $font-demi
    font-size: 18px
    font-weight: normal
    line-height: 1.3

  // Local time zone link


  // Title - admission event title is smaller than event title
  .field-name-title
    margin-bottom: 18px
    h1
      font-family: $font-sans
      font-size: 28px
      font-weight: bold
      line-height: 1.3
      +breakpoint($bp-mobile-max)
        font-size: 26px

  // Dek
  .field-name-field-editorial-summary
    font-size: 24px
    font-weight: normal
    line-height: 1.3
    margin-bottom: 18px
    +breakpoint($bp-mobile-max)
      font-size: 18px

  // Location teaser
  .location-teaser
    font-family: $font-demi
    font-size: 18px
    font-weight: normal
    line-height: 1.3
    +breakpoint($bp-mobile-max)
      font-size: 16px


  // Location link to full
  .location-anchor a
    color: $link-green
    font-family: $font-demi
    font-size: 18px
    font-weight: normal
    line-height: 1.3
    +breakpoint($bp-mobile-max)
      font-size: 16px
    &:hover
      color: $link-blue

  // Body
  .field-name-field-body
    @extend %divider-top
    margin-top: 26px
    margin-bottom: 26px
    padding-top: $standard-padding

  // Headings
  h2.label-above
    color: $text-black
    font-family: $font-sans
    font-size: 24px
    font-weight: bold
    line-height: 1.3
    margin-bottom: 12px

  h3.label-above
    color: $text-black
    font-family: $font-sans
    font-size: 20px
    font-weight: bold
    line-height: 1.3
    margin-bottom: 8px

  // Speakers
  .field-name-field-event-speakers
    @extend %divider-bottom
    margin-bottom: 26px
    padding-bottom: $standard-padding
    // Speaker description
    .field-name-field-description
      margin-top: 8px

  // Each speaker
  .field-collection-item-field-event-speakers
    font-size: 18px
    line-height: 1.3
    margin-bottom: 26px
    +breakpoint($bp-mobile-max)
      font-size: 16px
    .field-type-image
      display: none
    a
      color: $link-green
      &:hover
        color: $link-blue
    // Names styling
    .field-name-title,
    h3,
    .field-name-field-link-single
      color: $text-black
      font-family: $font-sans
      font-size: 20px
      font-weight: bold
      line-height: 1.3
      margin-bottom: 4px
    &:last-of-type
      margin-bottom: 0

  // Registration deadline
  .field-name-field-date-time
    margin-bottom: 12px
    .date-display-single
      font-size: 18px
      line-height: 1.3
      +breakpoint($bp-mobile-max)
        font-size: 16px

  // Register CTA
  .field-name-field-register-url
    @extend %cta-white-link
    max-width: 350px
    width: 100%

  // Information CTA
  .field-name-field-link-event-more-info
    @extend %cta-green-link
    max-width: 350px
    width: 100%

  // Full location information
  .field-name-field-event-location
    @extend %divider-top
    margin-top: 26px
    padding-top: $standard-padding

  .field-collection-item-field-event-location
    font-size: 18px
    line-height: 1.3
    margin-bottom: 8px
    +breakpoint($bp-mobile-max)
      font-size: 16px
    &:last-of-type
      margin-bottom: 0

  // Event type label
  .field-name-field-event-location-type
    font-weight: bold
    margin-bottom: 4px

  // View map link
  .field-name-field-link-map
    font-family: $font-demi
    a
      color: $link-green
      &:hover
        color: $link-blue

  // Schedule
  .field-name-field-schedule
    @extend %divider-top
    margin-top: 26px
    padding-top: $standard-padding

  // Contact block

